# ChangeLog for dev-ruby/prawn-layout
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/prawn-layout/ChangeLog,v 1.4 2010/02/01 09:23:09 flameeyes Exp $

*prawn-layout-0.7.2 (01 Feb 2010)

  01 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +prawn-layout-0.7.2.ebuild:
  Version bump.

  28 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  prawn-layout-0.7.1.ebuild:
  Enable JRuby support.

*prawn-layout-0.7.1 (24 Jan 2010)

  24 Jan 2010; Hans de Graaff <graaff@gentoo.org>
  +prawn-layout-0.7.1.ebuild:
  Version bump for prawn 0.7.1. Convert to ruby-fakegem.

*prawn-layout-0.1.0 (16 Jul 2009)

  16 Jul 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +prawn-layout-0.1.0.ebuild, +metadata.xml:
  Initial import of prawn-layout extension for prawn.
