@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/prawn
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/prawn/ChangeLog,v 1.5 2010/02/01 09:23:29 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/prawn/ChangeLog,v 1.6 2010/04/30 20:26:32 graaff Exp $
+
+  30 Apr 2010; Hans de Graaff <graaff@gentoo.org> -prawn-0.4.1.ebuild:
+  Remove old version.
 
 *prawn-0.7.2 (01 Feb 2010)
 
