@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/prawn-layout
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/prawn-layout/ChangeLog,v 1.4 2010/02/01 09:23:09 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/prawn-layout/ChangeLog,v 1.5 2010/04/30 20:25:05 graaff Exp $
+
+  30 Apr 2010; Hans de Graaff <graaff@gentoo.org>
+  -prawn-layout-0.1.0.ebuild:
+  Remove old version.
 
 *prawn-layout-0.7.2 (01 Feb 2010)
 
